CB-21204 Increase SSSD heartbeat timeout to support more users/groups
SSSD enumeration takes more time as the number of users/groups increases. At some point the sssd watchdog will assume that enumeration is stuck and kill the process. Enumeration will begin again, but will consistently be killed by the watchdog.
The new value will be 60sec.

```
   Options usable in SERVICE and DOMAIN sections
       timeout (integer)
           Timeout in seconds between heartbeats for this service. This is used to ensure that the process is alive and
           capable of answering requests. Note that after three missed heartbeats the process will terminate itself.

           Default: 10
```

--- a/orchestrator-salt/src/main/resources/salt/salt/sssd/template/sssd-ipa.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/sssd/template/sssd-ipa.j2
@@ -25,3 +25,5 @@ ldap_tls_cacert = /etc/ipa/ca.crt
 ipa_hostname = {{ salt['grains.get']('fqdn') }}
 enumerate = {{ pillar['sssd-ipa']['enumerate'] }}
 entry_cache_timeout = {{ pillar['sssd-ipa']['entryCacheTimeout'] }}
+timeout = {{ pillar['sssd-ipa']['heartbeatTimeout'] | default(60, true) }}
+
