--- a/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
+++ b/orchestrator-salt/src/main/resources/salt/salt/gateway/config/cm/topology_api.xml.j2
@@ -435,6 +435,21 @@
     {%- endif %}
     {%- endif %}
 
+    {% if 'RANGER_RAZ_SERVER' in salt['pillar.get']('gateway:location') -%}
+    {% if 'RANGERRAZ' in exposed -%}
+    <service>
+        <role>RANGERRAZ</role>
+        {% for hostloc in salt['pillar.get']('gateway:location')['RANGER_RAZ_SERVER'] -%}
+        <url>{{ protocol }}://{{ hostloc }}:{{ ports['RANGERRAZ'] }}</url>
+        {%- endfor %}
+        <param>
+            <name>replayBufferSize</name>
+            <value>128</value>
+        </param>
+    </service>
+    {%- endif %}
+    {%- endif %}
+
     {% if 'RESOURCEMANAGER' in salt['pillar.get']('gateway:location') -%}
     {% if 'YARNUIV2' in exposed -%}
     <service>
